# stockmq-quik

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-windows.yml  cmake.yml  jekyll-gh-pages.yml
examples/csharp/: ConsoleApp1.sln
examples/csharp/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
examples/go/: go.mod  main.go
examples/go/quik/: core.go  functions.go  quik.go
examples/golang/: go.mod  go.sum  main.go
examples/golang/quik/: core.go  functions.go  quik.go
examples/golang/rpcclient-linked/: go.mod  main.go  rpcclient-linked
examples/golang/rpcclient-native/: go.mod  main.go  rpcclient-native
examples/java/: pom.xml
examples/java/src/main/java/com/stockmq/: Main.java  RPCClient.java
examples/kotlin/: build.gradle.kts  settings.gradle.kts
examples/kotlin/gradle/wrapper/: gradle-wrapper.properties
examples/kotlin/src/main/kotlin/: Main.kt
examples/nodejs/: index.js  index.ts  package-lock.json  package.json  tsconfig.json
examples/perl/: main.pl
examples/python/: benchmark.py  main.py  repl.py  requirements.txt  setup.py
examples/python/configs/: reports.yaml
examples/python/scripts/: all_trades.py  datasource.py  reports.py  test.py
examples/python/stockmq/: api.py  data.py  rpc.py  schema.py
integration/: quik-async.lua  quik.lua
integration/src/: stockmq-callbacks.lua  stockmq-core.lua  stockmq-ds.lua  stockmq-orders.lua  stockmq-transactions.lua  stockmq-user.lua
lua53/: CMakeLists.txt
lua54/: CMakeLists.txt
src/: LuaOverMQ.cpp  LuaOverMQ.h  StockMQ.cpp  stockmq.cpp  stockmq.h
